--- a/index.html
+++ b/index.html
@@ -1,50 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>YouTube</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <header class="header">
-        <button class="menu-button">
-            <span class="menu-line"></span>
-            <span class="menu-line"></span>
-            <span class="menu-line"></span>
-        </button>
-        <img src="img/logo.svg" alt="Логотип YouTube" class="logo">
-        <div class="input-group">
-            <input type="search" name="search" class="input-search" placeholder="Search">
-            <button type="submit" class="button-search">
-                <svg class="icon icon-search" width="19" height="19">
-                    <use xlink:href="img/icons.svg#search"></use>
-                </svg>
-            </button>
-        </div>
-        <div class="icons">
-            <a href="#" class="icons-link">
-                <svg class="icon icon-video" width="27" height="20">
-                    <use xlink:href="img/icons.svg#video"></use>
-                </svg>
+  <header class="header">
+    <button class="menu-button">
+      <span class="menu-line"></span>
+      <span class="menu-line"></span>
+      <span class="menu-line"></span>
+    </button>
+    <img src="img/logo.svg" alt="Логотип YouTube" class="logo">
+    <div class="input-group">
+      <input type="search" name="search" class="input-search" placeholder="Search">
+      <button type="submit" class="button-search">
+        <svg class="icon icon-search" width="19" height="19">
+          <use xlink:href="img/icons.svg#search"></use>
+        </svg>
+      </button>
+    </div>
+    <div class="icons">
+      <a href="#" class="icons-link">
+        <svg class="icon icon-video" width="27" height="20">
+          <use xlink:href="img/icons.svg#video"></use>
+        </svg>
+      </a>
+      <a href="#" class="icons-link">
+        <svg class="icon icon-apps" width="21" height="21">
+          <use xlink:href="img/icons.svg#apps"></use>
+        </svg>
+      </a>
+      <a href="#" class="icons-link">
+        <svg class="icon icon-notification" width="22" height="26">
+          <use xlink:href="img/icons.svg#notification"></use>
+        </svg>
+      </a>
+    </div>
+    <a href="#" class="user">
+      <img src="img/avatar.png" alt="Profile Photo" class="user-avatar">
+    </a>
+    <!-- /.user -->
+  </header>
+  <div class="container">
+    <aside class="sidebar">
+      <nav class="nav">
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-home" width="20" height="19">
+                <use xlink:href="img/icons.svg#home"></use>
+              </svg>
+              <span class="nav-text">Home</span>
             </a>
-            <a href="#" class="icons-link">
-                <svg class="icon icon-apps" width="21" height="21">
-                    <use xlink:href="img/icons.svg#apps"></use>
-                </svg>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-trending" width="16" height="21">
+                <use xlink:href="img/icons.svg#trending"></use>
+              </svg>
+              <span class="nav-text">Trending</span>
             </a>
-            <a href="#" class="icons-link">
-                <svg class="icon icon-notification" width="22" height="26">
-                    <use xlink:href="img/icons.svg#notification"></use>
-                </svg>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-subscriptions" width="18" height="18">
+                <use xlink:href="img/icons.svg#subscriptions"></use>
+              </svg>
+              <span class="nav-text">Subscriptions</span>
             </a>
-        </div>
-        <a href="#" class="user">
-            <img src="img/avatar.jpg" alt="Умняш" class="user-avatar">
-        </a>
-        <!-- /.user -->
-    </header>
+          </li>
+        </ul>
+
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-library" width="20" height="19">
+                <use xlink:href="img/icons.svg#library"></use>
+              </svg>
+              <span class="nav-text">Library</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-history" width="20" height="19">
+                <use xlink:href="img/icons.svg#history"></use>
+              </svg>
+              <span class="nav-text">History</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-watch-later" width="20" height="19">
+                <use xlink:href="img/icons.svg#watch-later"></use>
+              </svg>
+              <span class="nav-text">Watch later</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-favourites" width="20" height="19">
+                <use xlink:href="img/icons.svg#favourites"></use>
+              </svg>
+              <span class="nav-text">Favourites</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-liked-videos" width="20" height="19">
+                <use xlink:href="img/icons.svg#liked-videos"></use>
+              </svg>
+              <span class="nav-text">Liked videos</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-music" width="20" height="19">
+                <use xlink:href="img/icons.svg#music"></use>
+              </svg>
+              <span class="nav-text">Music</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-games" width="20" height="19">
+                <use xlink:href="img/icons.svg#games"></use>
+              </svg>
+              <span class="nav-text">Games</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-chevron-down" width="20" height="19">
+                <use xlink:href="img/icons.svg#chevron-down"></use>
+              </svg>
+              <span class="nav-text">Show more</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <h2 class="nav-title">Subscriptions</h2>
+      <ul class="nav-menu">
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <img src="img/gussie-singleton.png" alt="Photo: Gussie Singleton" class="nav-image">
+            <span class="nav-text">Gussie Singleton</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <img src="img/nora-francis.png" alt="Photo: Nora Francis" class="nav-image">
+            <span class="nav-text">Nora Francis</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <img src="img/belle-briggs.png" alt="Photo: Belle Briggs" class="nav-image">
+            <span class="nav-text">Belle Briggs</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <img src="img/eunice-cortez.png" alt="Photo: Eunice Cortez" class="nav-image">
+            <span class="nav-text">Eunice Cortez</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <img src="img/emma-hanson.png" alt="Photo: Emma Hanson" class="nav-image">
+            <span class="nav-text">Emma Hanson</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <img src="img/leah-berry.png" alt="Photo: Leah Berry" class="nav-image">
+            <span class="nav-text">Leah Berry</span>
+          </a>
+        </li>
+      </ul>
+
+      <ul class="nav-menu">
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <svg class="icon icon-setting" width="19" height="20">
+              <use xlink:href="img/icons.svg#setting"></use>
+            </svg>
+            <span class="nav-text">Setting</span>
+          </a>
+        </li>
+      </ul>
+    </aside>
+  </div>
 </body>
+
 </html>
